2005-04-15  Dan Williams  <dcbw@redhat.com>

	* libnm_glib/libnm_glib: Fix up for dbus-0.32, and remove
		code for dbus 0.2x versions

2005-04-15  Dan Williams  <dcbw@redhat.com>

	Patches from Tom Parker:
	- Fix memleaks
	- Join with worker thread rather than polling for its exit

	Patch from Bill Moss:
	- Cull duplicate ESSIDs from the scan list, taking highest strength AP

2005-04-06  Dan Williams  <dcbw@redhat.com>

	Add debug code for socket/file descriptor leaks.  We register every socket
	that we open (except for stuff in dhcpcd/) for tracking, and print out the
	list of sockets that we forgot to close on shutdown.  This also consolidates
	about 4 places where we opened sockets into 1 function in NetworkManagerUtils.c

2005-04-06  Dan Williams  <dcbw@redhat.com>

	* dhcpcd/dhcpcd.c
		- (dhcp_interface_free): fix a file descriptor leak that may have
			caused network drivers to not unload due to refcounts > 0

2005-04-04  Dan Williams  <dcbw@redhat.com>

	* panel-applet/NMWirelessAppletDbus.c
		- (nmwa_dbus_call_nm_method): remove some commented code

	* src/NetworkManagerAPList.[ch]
		- (nm_ap_list_remove_ap_by_essid): new function

	* src/NetworkManagerDevice.c
		- (nm_device_wireless_force_use): remove access points from the ignore list
			when the user forces them

	* src/nm-dbus-device.c
		- (nm_dbus_device_get_active_network): fix up escaping of object paths

2005-04-04  Dan Williams  <dcbw@redhat.com>

	Patch from Tom Parker: include "nm-utils.h" for backend files that need it

2005-04-04  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManagerDevice.c:
		- (nm_completion_scan_has_results): restore pre-completion-patch behavior
			of only erroring after the second consecutive scan times out.  Also
			don't exit when the card requires more time than we can give it, just
			log the event and continue.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-04-01  Dan Williams <dcbw@redhat.com>
